--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "server/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack -w",
-    "start": "nodemon server.js"
+    "build": "webpack",
+    "build:watch": "webpack -w",
+    "start": "npm run build && nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -38,6 +39,8 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2"
   }
 }
