--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@babel/polyfill": "^7.0.0",
     "express": "^4.16.3",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "react-router-dom": "^4.3.1"
   }
 }
