--- a/package.json
+++ b/package.json
@@ -40,8 +40,11 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
     "express": "^4.16.3",
+    "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-router-dom": "^4.3.1"
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0"
   }
 }
