--- a/package.json
+++ b/package.json
@@ -32,7 +32,12 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
     "cors": "^2.8.4",
+    "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
+    "node-sass": "^4.9.3",
     "nodemon": "^1.18.4",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.0",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.1",
     "webpack-node-externals": "^1.7.2"
